--- a/laba3/code.yaml
+++ b/laba3/code.yaml
@@ -11,20 +11,20 @@
 #Tesla Model S имеет электрический двигатель
 tesla-has-electric-engine:
   source: "Tesla Model S"
-  question: "Какой тип двигателя?"
-  answer: "Электро"
-  
+  type: "Какой тип двигателя?"
+  destination: "Электро"
+
 #Tesla Model S производится в США
 tesla-is-produced-in-usa:
   source: "Tesla Model S"
-  question: "Какая страна производства?"
-  answer: "США"  
-  
+  type: "Какая страна производства?"
+  destination: "США"
+
 #Tesla Model S имеет тип кузова седан
 tesla-is-sedan:
   source: "Tesla Model S"
-  question: "Какой тип кузова?"
-  answer: "Седан"
+  type: "Какой тип кузова?"
+  destination: "Седан"
 
 #
 #BMW M5
@@ -33,20 +33,20 @@ tesla-is-sedan:
 #BMW M5 имеет бензиновый двигатель
 bmw-has-petrol-engine:
   source: "BMW M5"
-  question: "Какой тип двигателя?"
-  answer: "Бензин"
-  
+  type: "Какой тип двигателя?"
+  destination: "Бензин"
+
 #BMW M5 производится в Германии
 bmw-is-produced-in-germany:
   source: "BMW M5"
-  question: "Какая страна производства?"
-  answer: "Германия"  
-  
+  type: "Какая страна производства?"
+  destination: "Германия"
+
 #BMW M5 имеет тип кузова седан
 bmw-is-sedan:
   source: "BMW M5"
-  question: "Какой тип кузова?"
-  answer: "Седан"    
+  type: "Какой тип кузова?"
+  destination: "Седан"
 
 #
 #Lamborghini Huracan
@@ -55,21 +55,21 @@ bmw-is-sedan:
 #Lamborghini Huracan имеет бензиновый двигатель
 lamborghini-has-petrol-engine:
   source: "Lamborghini Huracan"
-  question: "Какой тип двигателя?"
-  answer: "Бензин"
-  
+  type: "Какой тип двигателя?"
+  destination: "Бензин"
+
 #Lamborghini Huracan производится в Италии
 lamborghini-is-produced-in-italy:
   source: "Lamborghini Huracan"
-  question: "Какая страна производства?"
-  answer: "Италия"  
-  
+  type: "Какая страна производства?"
+  destination: "Италия"
+
 #Lamborghini Huracan имеет тип кузова купе
 lamborghini-is-coupe:
   source: "Lamborghini Huracan"
-  question: "Какой тип кузова?"
-  answer: "Купе"
-  
+  type: "Какой тип кузова?"
+  destination: "Купе"
+
 #
 #Audi Q7
 #
@@ -77,21 +77,21 @@ lamborghini-is-coupe:
 #Audi Q7 имеет дизельный двигатель
 audi-has-diesel-engine:
   source: "Audi Q7"
-  question: "Какой тип двигателя?"
-  answer: "Дизель"
-  
+  type: "Какой тип двигателя?"
+  destination: "Дизель"
+
 #Audi Q7 производится в Германии
 audi-is-produced-in-germany:
   source: "Audi Q7"
-  question: "Какая страна производства?"
-  answer: "Германия"  
-  
+  type: "Какая страна производства?"
+  destination: "Германия"
+
 #Audi Q7 имеет тип кузова внедорожник
 audi-is-suv:
   source: "Audi Q7"
-  question: "Какой тип кузова?"
-  answer: "Внедорожник"
-  
+  type: "Какой тип кузова?"
+  destination: "Внедорожник"
+
 #
 #Kia Picanto
 #
@@ -99,20 +99,20 @@ audi-is-suv:
 #Kia Picanto имеет бензиновый двигатель
 kia-has-petrol-engine:
   source: "Kia Picanto"
-  question: "Какой тип двигателя?"
-  answer: "Бензин"
-  
+  type: "Какой тип двигателя?"
+  destination: "Бензин"
+
 #Kia Picanto производится в Южной Корее
 kia-is-produced-in-korea:
   source: "Kia Picanto"
-  question: "Какая страна производства?"
-  answer: "Южная Корея"  
-  
+  type: "Какая страна производства?"
+  destination: "Южная Корея"
+
 #Kia Picanto имеет тип кузова хэтчбек
 kia-is-hatchback:
   source: "Kia Picanto"
-  question: "Какой тип кузова?"
-  answer: "Хэтчбек"   
+  type: "Какой тип кузова?"
+  destination: "Хэтчбек"
 
 #
 #Toyota Hilux
@@ -121,20 +121,20 @@ kia-is-hatchback:
 #Toyota Hilux имеет бензиновый и дизельный двигатель
 toyota-has-petrol-and-diesel-engine:
   source: "Toyota Hilux"
-  question: "Какой тип двигателя?"
-  answer: ["Бензин", "Дизель"]
-  
+  type: "Какой тип двигателя?"
+  destination: ["Бензин", "Дизель"]
+
 #Toyota Hilux производится в Японии
 toyota-is-produced-in-japan:
   source: "Toyota Hilux"
-  question: "Какая страна производства?"
-  answer: "Япония"  
-  
+  type: "Какая страна производства?"
+  destination: "Япония"
+
 #Toyota Hilux имеет тип кузова пикап
 toyota-is-pickup:
   source: "Toyota Hilux"
-  question: "Какой тип кузова?"
-  answer: "Пикап"     
+  type: "Какой тип кузова?"
+  destination: "Пикап"
 
 #
 #
@@ -149,33 +149,33 @@ toyota-is-pickup:
 #В Германии производятся следующие автомобили: BMW M5, Audi Q7
 germany-has-cars:
   source: "Германия"
-  question: "Какие автомобили производит?"
-  answer: ["BMW M5", "Audi Q7"]  
-  
+  type: "Какие автомобили производит?"
+  destination: ["BMW M5", "Audi Q7"]
+
 #В США производятся следующие автомобили: Tesla Model S
 usa-has-cars:
   source: "США"
-  question: "Какие автомобили производит?"
-  answer: "Tesla Model S"
+  type: "Какие автомобили производит?"
+  destination: "Tesla Model S"
 
 #В Италии производятся следующие автомобили: Lamborghini Huracan
 italy-has-cars:
   source: "Италия"
-  question: "Какие автомобили производит?"
-  answer: "Lamborghini Huracan"  
+  type: "Какие автомобили производит?"
+  destination: "Lamborghini Huracan"
 
 #В Южной Корее производятся следующие автомобили: Kia Picanto
 korea-has-cars:
   source: "Южная Корея"
-  question: "Какие автомобили производит?"
-  answer: "Kia Picanto"      
+  type: "Какие автомобили производит?"
+  destination: "Kia Picanto"
 
 #В Японии производятся следующие автомобили: Toyota Hilux
 japan-has-cars:
   source: "Япония"
-  question: "Какие автомобили производит?"
-  answer: "Toyota Hilux"
-  
+  type: "Какие автомобили производит?"
+  destination: "Toyota Hilux"
+
 #
 #Тип кузова у автомобилей
 #
@@ -183,32 +183,32 @@ japan-has-cars:
 #Тип кузова седан имеют следующие автомобили: BMW M5, Tesla Model S
 sedan-are-cars:
   source: "Седан"
-  question: "Какие автомобили имеют этот тип кузова?"
-  answer: ["BMW M5", "Tesla Model S"] 
+  type: "Какие автомобили имеют этот тип кузова?"
+  destination: ["BMW M5", "Tesla Model S"]
 
 #Тип кузова хэтчбек имеют следующие автомобили: Kia Picanto
 hatchback-are-cars:
   source: "Хэтчбек"
-  question: "Какие автомобили имеют этот тип кузова?"
-  answer: "Kia Picanto"  
+  type: "Какие автомобили имеют этот тип кузова?"
+  destination: "Kia Picanto"
 
 #Тип кузова внедорожник имеют следующие автомобили: Audi Q7
 suv-are-cars:
   source: "Внедорожник"
-  question: "Какие автомобили имеют этот тип кузова?"
-  answer: "Audi Q7" 
-  
+  type: "Какие автомобили имеют этот тип кузова?"
+  destination: "Audi Q7"
+
 #Тип кузова пикап имеют следующие автомобили: Toyota Hilux
 pickup-are-cars:
   source: "Пикап"
-  question: "Какие автомобили имеют этот тип кузова?"
-  answer: "Toyota Hilux"
+  type: "Какие автомобили имеют этот тип кузова?"
+  destination: "Toyota Hilux"
 
 #Тип кузова купе имеют следующие автомобили: Lamborghini Huracan
 coupe-are-cars:
   source: "Купе"
-  question: "Какие автомобили имеют этот тип кузова?"
-  answer: "Lamborghini Huracan"
+  type: "Какие автомобили имеют этот тип кузова?"
+  destination: "Lamborghini Huracan"
 
 #
 #Тип двигателя у автомобилей
@@ -217,17 +217,17 @@ coupe-are-cars:
 #Бензиновый двигатель имеют следующие автомобили: BMW M5, Lamborghini Huracan, Kia Picanto, Toyota Hilux
 petrol-engine-has-cars:
   source: "Бензин"
-  question: "Какие автомобили имеют этот тип двигателя?"
-  answer: ["BMW M5", "Lamborghini Huracan", "Kia Picanto", "Toyota Hilux"] 
+  type: "Какие автомобили имеют этот тип двигателя?"
+  destination: ["BMW M5", "Lamborghini Huracan", "Kia Picanto", "Toyota Hilux"]
 
 #Дизельный двигатель имеют следующие автомобили: Audi Q7, Toyota Hilux
 diesel-engine-has-cars:
   source: "Дизель"
-  question: "Какие автомобили имеют этот тип двигателя?"
-  answer: ["Audi Q7", "Toyota Hilux"] 
-  
+  type: "Какие автомобили имеют этот тип двигателя?"
+  destination: ["Audi Q7", "Toyota Hilux"]
+
 #Электрическиц двигатель имеют следующие автомобили: Tesla Model S
 electric-engine-has-cars:
   source: "Электро"
-  question: "Какие автомобили имеют этот тип двигателя?"
-  answer: "Tesla Model S"   
+  type: "Какие автомобили имеют этот тип двигателя?"
+  destination: "Tesla Model S"   
